# workifi

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
contrib/: make-linux-pkg.sh  make-mingw-pkg.sh  makepkg-x86_64-pc-linux-gnu.sh  makepkg-x86_64-w64-mingw32.static.sh  release.sh  workifi.bat
etc/: config.json  list.json  urls.json
src/: http.c  http.h  mime.c  mime.h  utils.c  utils.h  workifi.c  workifi.h
